--- a/css/home.css
+++ b/css/home.css
@@ -4,16 +4,30 @@ h1 {
     /*color: #5BC0DE;*/
 }
 
+h2 {
+    color: #449D44;
+    font-size: 40px;
+}
+
+h3{
+    color: #8ac007;
+    font-size: 25px;
+}
+
 h4 {
     color:white;
     font-size: 22px;
-    /*margin: ;*/
+}
+
+h5 {
+    color: #8ac007;
+    font-size: 18px;
 }
 
 .container {
     border: 2px solid gray;
     border-radius: 10px;
-    margin: 10px;
+    margin: 10px 20px 15px;
     padding: 15px 15px 50px;
 }
 
@@ -22,9 +36,9 @@ h4 {
     font-size: 18px;
 }
 
-.buttonCrop {
-    color: #8ac007;
-}
+/* ***************************************** */
+/* *************** HOME PAGE *************** */
+/* ***************************************** */
 
 .basicDiv {
     border-radius: 10px;
@@ -55,42 +69,17 @@ h4 {
     margin: 20px 20px 20px 60px;
 }
 
-/*#header {*/
-/*margin-top: 5px;*/
-/*}*/
 
-/*.fields{*/
-/*line-height: 2;*/
-/*margin-top: 5px;*/
-/*}*/
+/* ***************************************** */
+/* *************** NOTE PAGE *************** */
+/* ***************************************** */
+.form-group{
+    padding-left: 20px;
+}
 
-/*#chartContainer, #chartContainer2 {*/
-/*vertical-align: middle;*/
-/*line-height: 300px;*/
-/*min-height: 300px;*/
-/*width: 50%;*/
-/*float: left;*/
-/*}*/
-
-/*.columnName {*/
-/*border-radius: 4px;*/
-/*border: 1px solid #ccc;*/
-/*cursor: pointer;*/
-/*display: table;*/
-/*font-size: 14px;*/
-/*font-weight: 400;*/
-/*line-height: 1.42857;*/
-/*margin-bottom: 5px;*/
-/*padding: 6px 12px;*/
-/*text-align: center;*/
-/*vertical-align: middle;*/
-/*white-space: nowrap;*/
-/*}*/
-
-/*.disabled {*/
-/*color: grey;*/
-/*}*/
-
+.dc-table-group {
+    cursor : pointer;
+}
 
 /* ******************************************** */
 /* ****************** TOOLTIP ***************** */
