Sawing : calendar & reset form

--- a/css/home.css
+++ b/css/home.css
@@ -116,6 +116,9 @@ button a {
     font-size: 18px;
 }
 
+#plantDateWeek{
+    margin-top: 8px;
+}
 
 /* ******************************************** */
 /* ****************** TOOLTIP ***************** */
