--- a/css/home.css
+++ b/css/home.css
@@ -128,6 +128,16 @@ button a {
     margin-top: 8px;
 }
 
+#plantDateWarning {
+    color: #FF7F50;
+    margin-top: 11px;
+}
+
+#plantDateWarning img {
+    margin-top: -9px;
+}
+
+
 /* ******************************************** */
 /* ****************** TOOLTIP ***************** */
 /* ******************************************** */
