--- a/css/home.css
+++ b/css/home.css
@@ -149,6 +149,20 @@ button a {
 }
 
 
+/* ***************************************** */
+/* *************** FORECAST PAGE *********** */
+/* ***************************************** */
+.forecastTitle {
+    color: #008080;
+    font-size: 40px;
+}
+
+.forecastSubTitle {
+    color: #5F9EA0;
+    font-size: 25px;
+}
+
+
 /* ******************************************** */
 /* ****************** TOOLTIP ***************** */
 /* ******************************************** */
