--- a/css/home.css
+++ b/css/home.css
@@ -50,9 +50,10 @@ h4 {
 .containerHome {
     border: 2px solid gray;
     border-radius: 10px;
-    min-height: 500px;
+    min-height: 600px;
     margin-top: 10px;
     padding-top : 10px;
+    position: relative;
 }
 
 #dateValue {
@@ -65,9 +66,11 @@ h4 {
     color: #696969;
 }
 
-.bottomBanner {
+.footer {
     color: #449D44;
     font-size: 12px;
+    position: absolute;
+    bottom: 0;
 }
 
 #climateZones{
@@ -134,6 +137,11 @@ button a {
     font-size: 18px;
 }
 
+#smallDateValue {
+    color: gray;
+    font-size: 14px;
+    margin-top: 15px;
+}
 
 /* ***************************************** */
 /* ************ SAWING SHEET PAGE ********** */
