--- a/css/home.css
+++ b/css/home.css
@@ -143,6 +143,10 @@ button a {
     margin-top: 15px;
 }
 
+#containerImages{
+    height: 50%;
+}
+
 /* ***************************************** */
 /* ************ SAWING SHEET PAGE ********** */
 /* ***************************************** */
