--- a/css/home.css
+++ b/css/home.css
@@ -133,6 +133,14 @@ button a {
     font-size: 40px;
 }
 
+.vegetaleSubTitle{
+    color: #449D44;
+}
+
+.vegetaleSubTitle2{
+    color: #8ac007;
+}
+
 .vegetalNumberSheet {
     color: #8ac007;
     font-size: 18px;
