--- a/css/home.css
+++ b/css/home.css
@@ -152,9 +152,9 @@ button a {
     margin-top: 15px;
 }
 
-#containerImages{
-    height: 50%;
-}
+/*#containerImages{*/
+    /*height: 50%;*/
+/*}*/
 
 /* ***************************************** */
 /* ************ SAWING SHEET PAGE ********** */
