--- a/css/home.css
+++ b/css/home.css
@@ -43,6 +43,10 @@ h4 {
     color: gray;
 }
 
+.sums{
+    color: #449D44;
+    font-weight: bold;
+}
 
 /* ***************************************** */
 /* *************** HOME PAGE *************** */
