--- a/css/home.css
+++ b/css/home.css
@@ -158,7 +158,7 @@ button a {
 }
 
 /*#containerImages{*/
-    /*height: 50%;*/
+/*height: 50%;*/
 /*}*/
 
 /* ***************************************** */
@@ -235,6 +235,7 @@ button a {
 /* ****************** TOOLTIP ***************** */
 /* ******************************************** */
 
+
 /* ************** BUTTON TOOLTIP ************** */
 .tooltip-inner {
     padding: 12px;
@@ -256,33 +257,33 @@ button a {
 }
 
 /* ************** D3-TIP ************** */
-/*.d3-tip {*/
-/*background: none repeat scroll 0 0 rgba(0, 0, 0, 0.6);*/
-/*border-radius: 8px 8px 8px 8px;*/
-/*color: #FFFFFF;*/
-/*font-weight: bold;*/
-/*line-height: 1;*/
-/*padding: 12px;*/
-/*max-width: 350px;*/
-/*}*/
+.d3-tip {
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.6);
+    border-radius: 8px 8px 8px 8px;
+    color: #FFFFFF;
+    font-weight: bold;
+    line-height: 1;
+    padding: 12px;
+    max-width: 350px;
+}
 
-/*.d3-tip:after {*/
-/*color: rgba(0, 0, 0, 0.8);*/
-/*content: "▼";*/
-/*display: inline;*/
-/*font-size: 10px;*/
-/*line-height: 1;*/
-/*position: absolute;*/
-/*text-align: center;*/
-/*width: 100%;*/
-/*}*/
+.d3-tip:after {
+    color: rgba(0, 0, 0, 0.8);
+    content: "▼";
+    display: inline;
+    font-size: 10px;
+    line-height: 1;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+}
 
-/*.d3-tip.n:after {*/
-/*left: 0;*/
-/*margin: -1px 0 0;*/
-/*top: 100%;*/
-/*}*/
+.d3-tip.n:after {
+    left: 0;
+    margin: -1px 0 0;
+    top: 100%;
+}
 
-/*.d3-tipTitle {*/
-/*color: #5bc0de;*/
-    }
+.d3-tipTitle {
+    color: #8ac007;
+}
